--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -258,6 +258,7 @@
             $(`#${id}-contents`).show();
             $(`#${id}-edit`).show();
         }
+
         ////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         // 여기서부터 코드를 작성해주시면 됩니다.
 
@@ -269,30 +270,111 @@
         // 메모를 불러와서 보여줍니다.
         function getMessages() {
             // 1. 기존 메모 내용을 지웁니다.
+            $('#cards-box').empty();
             // 2. 메모 목록을 불러와서 HTML로 붙입니다.
+            $.ajax({
+                type: 'GET',
+                url: '/api/memos',
+                success: function (response) {
+                    for (let i = 0; i < response.length; i++) {
+                        let memo = response[i];
+                        let id = memo.id;
+                        let username = memo.username;
+                        let contents = memo.contents;
+                        let modifiedAt = memo.modifiedAt;
+                        addHTML(id, username, contents, modifiedAt);
+                    }
+                }
+            })
         }
 
         // 메모 하나를 HTML로 만들어서 body 태그 내 원하는 곳에 붙입니다.
         function addHTML(id, username, contents, modifiedAt) {
             // 1. HTML 태그를 만듭니다.
+            let tempHtml = `<div class="card">
+        <!-- date/username 영역 -->
+        <div class="metadata">
+            <div class="date">
+                ${modifiedAt}
+            </div>
+            <div id="${id}-username" class="username">
+                ${username}
+            </div>
+        </div>
+        <!-- contents 조회/수정 영역-->
+        <div class="contents">
+            <div id="${id}-contents" class="text">
+            <!-- *-contents: contents READ -->
+                ${contents}
+            </div>
+            <div id="${id}-editarea" class="edit">
+                <textarea id="${id}-textarea" class="te-edit" name="" id="" cols="30" rows="5"></textarea>
+                <!-- *-textarea: contents PUT -->
+            </div>
+        </div>
+        <!-- 버튼 영역-->
+        <div class="footer">
+            <img id="${id}-edit" class="icon-start-edit" src="images/edit.png" alt="" onclick="editPost('${id}')">
+            <img id="${id}-delete" class="icon-delete" src="images/delete.png" alt="" onclick="deleteOne('${id}')">
+            <img id="${id}-submit" class="icon-end-edit" src="images/done.png" alt="" onclick="submitEdit('${id}')">
+        </div>
+    </div>`;
             // 2. #cards-box 에 HTML을 붙인다.
+            $('#cards-box').append(tempHtml);
         }
 
         // 메모를 생성합니다.
         function writePost() {
             // 1. 작성한 메모를 불러옵니다.
+            let contents = $('#contents').val();
             // 2. 작성한 메모가 올바른지 isValidContents 함수를 통해 확인합니다.
+            if (isValidContents(contents) == false) {
+                return;
+            }
             // 3. genRandomName 함수를 통해 익명의 username을 만듭니다.
+            let username = genRandomName(10);
             // 4. 전달할 data JSON으로 만듭니다.
+            let data = {'username': username, 'contents': contents};
             // 5. POST /api/memos 에 data를 전달합니다.
+            $.ajax({
+                // $.ajax({}): Willing to use jQuery
+                type: "POST",
+                url: "/api/memos",
+                contentType: "application/json", // JSON 형식으로 전달함을 알리기, 번역 잘하라고~
+                data: JSON.stringify(data),
+                // data (Body in ARC)
+                // JSON.stringify():  JavaScript 값이나 객체를 JSON 문자열로 변환해주는 메서드
+                success: function (response) {
+                    alert('메시지가 성공적으로 작성되었습니다.');
+                    window.location.reload();
+                    // 새로고침 F5
+                }
+            });
         }
 
         // 메모를 수정합니다.
         function submitEdit(id) {
             // 1. 작성 대상 메모의 username과 contents 를 확인합니다.
+            let username = $(`#${id}-username`).text().trim();
+            let contents = $(`#${id}-textarea`).val().trim();
             // 2. 작성한 메모가 올바른지 isValidContents 함수를 통해 확인합니다.
+            if (isValidContents(contents) == false) {
+                return;
+            }
             // 3. 전달할 data JSON으로 만듭니다.
+            let data = {'username': username, 'contents': contents};
             // 4. PUT /api/memos/{id} 에 data를 전달합니다.
+            $.ajax({
+                type: "PUT",
+                url: `/api/memos/${id}`,
+                contentType: "application/json",
+                // Hey, Java! this is not String type. It's JSON!
+                data: JSON.stringify(data),
+                success: function (response) {
+                    alert('메시지 변경에 성공하였습니다.');
+                    window.location.reload();
+                }
+            });
         }
 
         // 메모를 삭제합니다.
