타임라인 메시지 조회 / 생성 / 수정 / 삭제까지 구현!

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -379,7 +379,15 @@
 
         // 메모를 삭제합니다.
         function deleteOne(id) {
-            // 1. DELETE /api/memos/{id} 에 요청해서 메모를 삭제합니다.
+            $.ajax({
+                type: "DELETE",
+                url: `/api/memos/${id}`,
+                // Backtick(``)을 사용하지 않으면 문자열 그대로 전송이 되니 유의할 것!
+                success: function (response) {
+                    alert('메시지 삭제에 성공하였습니다.');
+                    window.location.reload();
+                }
+            })
         }
     </script>
 </head>
